# gradecope

./: Cargo.toml  TODO.md  add-students.sh  config.env  config.sh  gen-runner-mtls-certs.sh  gradecope-cli  init.sh  init.sql  newuser.sh  post-receive.sh  pubkeys.sh  run-switchboard.sh  style.sh  update.sh
.sqlx/: query-230d42eeb97e0ee18c2d908a21e72c57b0b619813111bee99583b0ba65ff7b69.json  query-4c73ad7e562b1f4a6927a1c06f400c7fa07388b1851f230e8199d75f80056bb0.json  query-4f56e463145fcbb09f15e2ed14d19620a9bd541c233acc531d23e4e81e79d415.json  query-5ce422fa80e7aa4aaef0615891a6726f5e618e0979f3d972c3f500347342a48e.json  query-668f3269e91b71e0e1b0b9799dca3c17935d27cce6a399be6b19056960e6e1b5.json  query-7016abb288ab13353ad300693a74fe53f4d03c4fea1d36815c2c59345b59b91d.json  query-71e3bc0cf02622a1ac96c7f0c599ff41647359971a7da6ab9fb91af16be36f5e.json  query-8896c91175394ad5a60e723f4fa75b432e8c269b438014504c5366527380e772.json  query-a7e0b875e4b495a3e4479c231ede4ca7f470cb07a25171b64c8c649b555e3717.json  query-ae3aef4e27d523f36d375c9b157d11b30b82df0823981232ee2db204a99e6eff.json  query-d7a38d03871120bbde58de2da412d6b4921b915f0e28cdd74ab59fde12cf6309.json  query-df454bcf0858ed0a9773619b07abe1d8bcb6a3a633ed0309deb787e90f7421cf.json  query-dfc09f15a24581ca4e6d5c0a767cc4b72ce961ee78a878d619459259e702d4e0.json
git-shell-commands/: gradecope-ctl  no-interactive-login
gradecope-ctl/: Cargo.toml
gradecope-ctl/src/: #main.rs#  main.rs
gradecope-proto/: Cargo.toml
gradecope-proto/src/: lib.rs
gradecope-runner/: Cargo.toml
gradecope-runner/src/: connection.rs  main.rs  runner.rs
gradecope-switchboard/: Cargo.toml
gradecope-switchboard/src/: #ctl.rs#  ctl.rs  main.rs  runner.rs  sql.rs  submission.rs
test-runners/: 1-trusting-trust.run.sh  3-cross-checking.run.sh
