[package]
name = "gradecope-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
colored = "3"
eyre.workspace = true
gradecope-proto = { path = "../gradecope-proto" }
tarpc.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
