[package]
name = "gradecope-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
gradecope-proto = { path = "../gradecope-proto" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
bytes = { workspace = true }
tarpc = { workspace = true }
yusb = "0.1.2"
chrono = "0.4.42"
async-tempfile = "0.7.0"
