[package]
name = "gradecope-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
gradecope-proto = { path = "../gradecope-proto" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
bytes = { workspace = true }
tarpc = { workspace = true }
yusb = "0.1.2"
chrono = { workspace = true }
async-tempfile = "0.7.0"
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std", "async-await"] }
pin-project = "1.1.10"

