[package]
name = "gradecope-switchboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["bytes", "macros", "rt-multi-thread"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid"] }
xdg = "3.0.0"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
futures-concurrency = "7.6.3"
rand = "0.9.2"
boxcar = "0.2.14"
axum-server = { version = "0.8.0", features = ["tls-rustls", "tokio-rustls"] }
rustls = "0.23.36"
tokio-rustls = "0.26.4"
tower = "0.5.2"
axum = { version = "0.8.8", features = ["ws", "macros", "http2", "tokio"] }
